(fix) Fix icon display and fix alignment of some tags

--- a/client/styles.css
+++ b/client/styles.css
@@ -25,7 +25,7 @@ ul
   list-style-type: none;
 /*  display: block; float: left;*/
   font-size: 20px;
-  color: #6E6E6E;
+  color: #000000;
 }
 
 
